--- a/jupyter/python_course1.ipynb
+++ b/jupyter/python_course1.ipynb
@@ -93,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'當中有一些小錯誤，再檢查一下吧！'"
+       "'答對了'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,19 +128,21 @@
     "tax_ratio = 3 / 1000\n",
     "\n",
     "# 買股票\n",
-    "account = 0\n",
+    "stock_value = stock_price * buy_amount * 1000\n",
+    "account = account - stock_value - stock_value * fee_ratio\n",
     "# 股價漲\n",
-    "stock_price = 0\n",
+    "stock_price = stock_price * 1.3\n",
     "\n",
     "# 賣股票\n",
-    "account = 0\n",
+    "stock_value = stock_price * buy_amount * 1000\n",
+    "account = account + stock_value - stock_value * (fee_ratio + tax_ratio)\n",
     "\n",
     "'答對了' if account == 110248.7875 else '當中有一些小錯誤，再檢查一下吧！'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +158,13 @@
     "上課習題：布林\n",
     "\"\"\"\n",
     "\n",
-    "a = (3 > 3)\n",
+    "a = (3 < 3)\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
        "'答對了'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,9 +185,9 @@
     "修改不等式，讓 a、b、c 都為 True\n",
     "\"\"\"\n",
     "\n",
-    "a = 3 > 4\n",
+    "a = 3 < 4\n",
     "b = 3 > 2 > 1\n",
-    "c = 1 + 2 == 4\n",
+    "c = 1 + 2 < 4\n",
     "\n",
     "\"\"\"\n",
     "以下為檢查用的代碼，不用管它們\n",
@@ -195,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'當中有一些小錯誤，再檢查一下吧！'"
+       "'答對了'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +226,7 @@
     "將答案依序寫在第15行，讓程式跑出「答對了！」的字樣\n",
     "\"\"\"\n",
     "\n",
-    "answers = [True, False, True]\n",
+    "answers = [False, True, False]\n",
     "\n",
     "\"\"\"\n",
     "以下為檢查用的代碼，不用管它們\n",
@@ -234,16 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'hello worldhello world'"
+       "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,27 +262,55 @@
     "上課練習，字串\n",
     "\"\"\"\n",
     "s = 'hello world'\n",
-    "s\n",
-    "#s[0]\n",
-    "#s[2]\n",
-    "#s[-1]\n",
-    "#s.count('l')\n",
-    "#s.find('o')\n",
-    "#s + s"
+    "\n",
+    "s[0]\n",
+    "\n",
+    "s[2]\n",
+    "\n",
+    "s[-1]\n",
+    "\n",
+    "s.count('l')\n",
+    "\n",
+    "s.find('o')\n",
+    "\n",
+    "s + s\n",
+    "\n",
+    "s.find('ll')\n",
+    "\n",
+    "c = 'll'\n",
+    "if s.find(c) == -1:\n",
+    "    print('no')\n",
+    "else:\n",
+    "    print('yes')\n",
+    "    \n",
+    "def contain(s, c):\n",
+    "    if s.find(c) == -1:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "contain(s, \"A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HPUI-PUI\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'當中有一些小錯誤，再檢查一下吧！'"
+       "'答對了'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,31 +325,28 @@
     "\n",
     "a = 'ABC' + 'DEF'\n",
     "b = \"HI\"\n",
-    "b = b.replace('I', 'A')\n",
-    "\n",
+    "b = b.replace('I', 'PUI-PUI')\n",
+    "print(b)\n",
     "\"\"\"\n",
     "手寫出 a、b ，將答案依序寫在第16行，讓程式跑出「答對了！」的字樣\n",
     "\"\"\"\n",
     "\n",
-    "answers = ['ABCDEK', 'HI']\n",
+    "answers = ['ABCDEF', 'HPUI-PUI']\n",
     "\n",
     "'答對了' if [a, b] == answers else '當中有一些小錯誤，再檢查一下吧！'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 'i am a string', True, False, 100]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 'i am a string', True, False, 100]\n"
+     ]
     }
    ],
    "source": [
@@ -321,25 +355,36 @@
     "\"\"\"\n",
     "\n",
     "li = [20, 40, 60, 80, 100]\n",
-    "#li = [1, 2, 3, 'i am a string', True, False]\n",
-    "li\n",
-    "#li[-1]\n",
-    "#li[1:4]\n",
     "\n",
-    "#li[2] = 4\n",
-    "#li\n",
+    "li = [1, 2, 3, 'i am a string', True, False]\n",
     "\n",
-    "#li.append(100)\n",
-    "#li"
+    "li[-1]\n",
+    "\n",
+    "li[1:4]\n",
+    "\n",
+    "li[2] = 4\n",
+    "\n",
+    "li.append(100)\n",
+    "\n",
+    "print(li)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 2, 3, 3, 4]\n",
+      "2.6666666666666665\n",
+      "8.6\n",
+      "7.4\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "回家功課\n",
@@ -357,8 +402,8 @@
     "\n",
     "  最近你的薪水又下來了，因為認真工作，這個月變成4萬！如何修改income list呢？\n",
     "\"\"\"\n",
-    "income\n",
-    "\n",
+    "income.append(4)\n",
+    "print(income)\n",
     "\"\"\"\n",
     "第二題\n",
     "\n",
@@ -366,7 +411,8 @@
     "  請用sum()、跟len()完成！\n",
     "\"\"\" \n",
     "\n",
-    "average_income = 0\n",
+    "average_income = sum(income) / len(income)\n",
+    "print(average_income)\n",
     "\n",
     "\"\"\"\n",
     "第三題\n",
@@ -374,29 +420,30 @@
     "  半年花費總共多少（用程式計算）\n",
     "\"\"\"\n",
     "\n",
-    "total_outcome = 0\n",
+    "total_outcome = sum(outcome)\n",
+    "print(total_outcome)\n",
     "\n",
     "\"\"\"\n",
     "第四題\n",
     "\n",
     "  這半年共累積多少資產？\n",
     "\"\"\"\n",
-    "balance = 0\n",
-    "\n"
+    "balance = sum(income) - total_outcome\n",
+    "print(balance)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values([90, 80])"
+       "dict_values([90, 80, 95])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,26 +454,26 @@
     "\"\"\"\n",
     "\n",
     "score = {'小民': 90, '大雄': 80}\n",
-    "#score['KEVEN'] = 95\n",
+    "score['KEVEN'] = 95\n",
     "score\n",
-    "#score['大雄']\n",
-    "#len(score)\n",
-    "#score.keys()\n",
-    "#score.values()"
+    "score['大雄']\n",
+    "len(score)\n",
+    "score.keys()\n",
+    "score.values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'當中有一些小錯誤，再檢查一下吧！'"
+       "'答對了！'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,6 +493,7 @@
     "}\n",
     "\n",
     "a = position['1526']\n",
+    "\n",
     "b = position['1102']\n",
     "\n",
     "\"\"\"\n",
@@ -459,7 +507,7 @@
     "  請將上面四題的答案寫成一個數列（list）\n",
     "\"\"\"\n",
     "\n",
-    "answer = [1, 2, 3, 4]\n",
+    "answer = [5, 6, 8, 5]\n",
     "\n",
     "\"\"\"\n",
     "按下執行(Run)，檢查你有沒有答對！\n",
@@ -471,38 +519,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
     "\"\"\"\n",
     "課堂練習：寫一個減法的函數，並使用看看\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "def sub(x, y):\n",
+    "    return x - y\n",
+    "\n",
+    "a = 5\n",
+    "b = 3\n",
+    "c = add(a, b)\n",
+    "print(c)\n",
+    "c = sub(a, b)\n",
+    "print(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'當中有一些小錯誤，再檢查一下吧！'"
+       "'答對了！'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +574,7 @@
     "\"\"\"\n",
     "\n",
     "def calculate_earning(buy_price, sell_price, amount=1):\n",
-    "    ret = 0\n",
+    "    ret = ( sell_price - buy_price ) * amount * 1000\n",
     "    return ret\n",
     "\n",
     "value = calculate_earning(30, 40, 2)\n",
@@ -530,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n課堂練習：顯示現在幾點\\n'"
+       "datetime.datetime(2021, 3, 10, 14, 58, 9, 63184)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,19 +605,22 @@
    "source": [
     "\"\"\"\n",
     "課堂練習：顯示現在幾點\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "dt.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "賺錢了\n"
+      "打平\n"
      ]
     }
    ],
@@ -568,7 +629,7 @@
     "顯示究竟是否獲利？\n",
     "\"\"\"\n",
     "\n",
-    "買入價 = 25\n",
+    "買入價 = 30\n",
     "賣出價 = 30\n",
     "\n",
     "if 買入價 < 賣出價:\n",
@@ -581,7 +642,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- 1 -----\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "----- 2 -----\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "----- 3 -----\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "----- 4 -----\n",
+      "1\n",
+      "2\n",
+      "----- 5 -----\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "For 迴圈：分別印出1、2、3、4\n",
+    "\"\"\"\n",
+    "print('-' *5, 1, '-' *5)\n",
+    "for i in range(1, 5):\n",
+    "    print(i)\n",
+    "    \n",
+    "print('-' *5, 2, '-' *5)\n",
+    "for i in range(1, 10, 2):\n",
+    "    print(i)\n",
+    "    \n",
+    "print('-' *5, 3, '-' *5)\n",
+    "for i in [1,2,3,4]:\n",
+    "    print(i)\n",
+    "\n",
+    "print('-' *5, 4, '-' *5)\n",
+    "for i in [1,2,3,4]:\n",
+    "    if(i == 3): break\n",
+    "    print(i)\n",
+    "\n",
+    "print('-' *5, 5, '-' *5)\n",
+    "for i in range(10):\n",
+    "    if(i == 5): continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -597,40 +726,16 @@
    ],
    "source": [
     "\"\"\"\n",
-    "For 迴圈：分別印出1、2、3、4\n",
-    "\"\"\"\n",
-    "\n",
-    "print(1)\n",
-    "print(2)\n",
-    "print(3)\n",
-    "print(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
     "While 迴圈：分別印出1、2、3、4\n",
     "\"\"\"\n",
-    "\n",
-    "print(1)\n",
-    "print(1)\n",
-    "print(1)\n",
-    "print(1)\n"
+    "i = 1\n",
+    "while(i < 5):\n",
+    "    print(i)\n",
+    "    i+=1\n",
+    "# print(1)\n",
+    "# print(1)\n",
+    "# print(1)\n",
+    "# print(1)\n"
    ]
   },
   {
@@ -664,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
